[package]
name = "caesium"
version = "0.6.0"
authors = ["Matteo Paonessa <matteo.paonessa@gmail.com>"]
edition = "2018"
categories = [
    "compression",
    "library",
]
description = "A lossy/lossless image compression library"
exclude = [
    "tests/*",
]
homepage = "https://github.com/Lymphatus/libcaesium"
license = "MIT"
repository = "https://github.com/shssoichiro/oxipng"

[dependencies]
mozjpeg = "0.8.20"
mozjpeg-sys = "0.10.10"
oxipng = "4.0.0"
libc = "0.2.76"

[dev-dependencies]
dssim = "2.11.2"
load_image = { version = "2.12.1", features = ["static"] }
imgref = "1.7.0"
lodepng = "3.0.0"
kamadak-exif = "0.5.0"

[lib]
name = "caesium"
path = "src/lib.rs"
crate-type = ["lib", "dylib"]
test = true
doctest = false
bench = false
doc = false
